force-app/main/default/objects/R2T_Exempted_Proposal_Settings__mdt/R2T_Exempted_Proposal_Settings__mdt.object-meta.xml
<CustomObject>
    <description>This setting is to select the default proposal template while generating the proposal document on the proposal record.In starting its being used for Priority product, Workforce Verificationa nd the startrack operations project</description>
    <label>R2T Exempted Proposal Settings</label>
    <pluralLabel>R2T Exempted Proposal Settings</pluralLabel>
</CustomObject>