force-app/main/default/objects/R2T_Exempted_Proposal_Settings__mdt/fields/APT_Terms_Condition_Template__c.field-meta.xml
<CustomField>
    <fullName>APT_Terms_Condition_Template__c</fullName>
    <description>This field contains the template Id for T&amp;c on the proposal record</description>
    <inlineHelpText>This field contains the template Id for T&amp;c on the proposal record</inlineHelpText>
    <label>Terms &amp; Condition Template</label>
    <length>200</length>
    <type>Text</type>
</CustomField>