force-app/main/default/objects/R2T_Exempted_Proposal_Settings__mdt/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <description>Pricing field is to decide if the exempted product have offline or online pricing</description>
    <inlineHelpText>Pricing field is to decide if the exempted product have offline or online pricing</inlineHelpText>
    <label>Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
                <default>true</default>
                <label>Online</label>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>