force-app/main/default/objects/R2T_Exempted_Proposal_Settings__mdt/fields/Proposal_template_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposal_template_Name__c</fullName>
    <label>Proposal template Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>